# datasketches-spark

./: .gitignore  README.md  build.sbt  version.cfg
.github/workflows/: ci.yaml  python_ci.yaml
examples/airflow/: README.md  install_wheels.sh  partial_workflow.py  simple_kll_example.py
project/: BuildUtils.scala
python/: MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
python/datasketches_spark/: __init__.py  common.py  kll.py
python/src/datasketches_spark/: __init__.py  _version.py  common.py  kll.py
python/tests/: conftest.py  kll_test.py
src/main/scala/org/apache/spark/sql/: functions_ds.scala
src/main/scala/org/apache/spark/sql/aggregate/: KllAggregate.scala  KllMerge.scala  ThetaSketchBuild.scala  ThetaUnion.scala
src/main/scala/org/apache/spark/sql/datasketches/common/: CastAsBinary.scala  CastToBinary.scala  DatasketchesFunctionRegistry.scala  DatasketchesScalaFunctionsBase.scala  functions.scala
src/main/scala/org/apache/spark/sql/datasketches/kll/: KllFunctionRegistry.scala  functions.scala
src/main/scala/org/apache/spark/sql/expressions/: KllExpressions.scala  ThetaExpressions.scala
src/main/scala/org/apache/spark/sql/registrar/: DatasketchesFunctionRegistry.scala  DatasketchesScalaFunctionsBase.scala  KllFunctionRegistry.scala  ThetaFunctionRegistry.scala  functions_datasketches_kll.scala  functions_datasketches_theta.scala
src/main/scala/org/apache/spark/sql/theta/: functions.scala
src/main/scala/org/apache/spark/sql/types/: KllDoublesSketchType.scala
src/test/scala/org/apache/spark/sql/: KllTest.scala  SparkSessionManager.scala  ThetaTest.scala
src/test/scala/org/apache/spark/sql/datasketches/: SparkSessionManager.scala
src/test/scala/org/apache/spark/sql/kll/: KllTest.scala
(+32 files in other folders)
