# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datasketches_spark"
#version = { file = "version.txt" }
dynamic = ["version"]
description = "The Apache DataSketches Library for Python"
authors = [
  { name = "Apache Software Foundation", email = "dev@datasketches.apache.org" }
]
license = { text = "Apache License 2.0" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "pyspark"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { file = "version.txt" }

[tool.setuptools.package-data]
datasketches_spark = ["deps/*"]

[tools.setuptools.find]
where = ["src"]
include = ["datasketches_spark"]
exclude = ["datasketches_spark.deps", "datasketches_spark.tests"]

[tool.cibuildwheel]
build-verbosity = 0  # options: 1, 2, or 3
skip = ["cp36-*", "cp37-*", "cp38-*", "pp*", "*-win32"]